# uhd-gmail-public

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
configs/test/: EEGNet.yaml  EEGNet_with_mask.yaml
configs/trainer/: config_color_combine.yaml  config_color_multirun.yaml  config_color_within_offline_split.yaml
plot_figures/: .gitattributes  coordinates.npy  coordinates_colorless.npy  cross_offline_test.py  evaluate_accs.py  make_preproc_files.py  montage_plotter.py  plot_accs.py  plot_contribution.py  plot_cross_accs.py  plot_finetuning_accs.py  plot_mis.py  plot_preprocessing.py  plot_rms.py  show_montage_decimation.py
plot_figures/src/: default_plt.py  eval_accs.py  load_ephys.py  load_ig.py  preproc.py  surrogates.py  weighted_corr.py
tests/: test_EEGNet.py  test_RNN.py
uhd_eeg/datasets/: DatasetUHD.py  __init__.py
uhd_eeg/models/CNN/: EEGNet.py
uhd_eeg/models/RNN/: RNN.py
uhd_eeg/preprocess/: adaptive_filter.py  padasip_mod.py
uhd_eeg/trainers/: __init__.py  trainer.py  trainer_combine_finetuning.py  trainer_within_offline_split.py
