[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "uhd-eeg"
description = "g.Pangolin UHD speech decoding project"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "requires-python", "authors"]
# requires-python = ""
# dependencies = []

[project.optional-dependencies]
dev = [
  "black",
]

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

