[project]
name = "uhd-gmail-public"
version = "0.1.0"
description = "The repository for reproducing the implementation of paper 'Delineating neural contributions to electroencephalogram-based speech decoding'"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "numpy",
    "pandas",
    "scikit_learn",
    "scipy",
    "transformers",
    "timm",
    "mne",
    "einops",
    "padasip",
    "pyriemann",
    "h5py",
    "natsort",
    "termcolor",
    "tqdm",
    "gdown",
    "hydra-core",
    "omegaconf",
    "clearml",
    "black",
    "wandb",
    "encodec",
    "julius",
    "mne-bids",
    "segmentation_models_pytorch",
    "librosa==0.9.2",
    "optuna",
    "attrdict",
    "hydra-joblib-launcher",
    "dill",
    "statsmodels",
    "torchinfo>=1.8.0",
]

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "torch-cuda", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'"},
    { index = "torch-cpu", marker = "sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')"},
]
torchaudio = [
    { index = "torch-cuda", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'"},
    { index = "torch-cpu", marker = "sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')"},
]
torchvision = [
    { index = "torch-cuda", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'"},
    { index = "torch-cpu", marker = "sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')"},
]

[tool.pyright]
include = [
    "**/*.py",
    "**/*.ipynb",
    "**/*.yaml",
]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "data",
    "logs",
    "outputs",
]

# 自身のコードのpackage化
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "plot_figures",
    "uhd_eeg",
]
include = [
    "/plot_figures",
    "/uhd_eeg",
    "README.md",
    "LICENSE",
]
